add message instead of alert in index page

--- a/designSite/account/templates/personal_index.html
+++ b/designSite/account/templates/personal_index.html
@@ -171,7 +171,18 @@
       {% endif %}
     </div>
   </div>
-
+  <!-- message modal -->
+  <div id="msg-modal" class="ui basic modal">
+      <div class="ui icon message">
+          <i class="notched circle loading icon"></i>
+          <div class="content">
+            <div class="header" id="msg-header">
+              Just one second
+            </div>
+            <p id="msg-body">Your alterations are sending to the server.</p>
+          </div>
+        </div>
+  </div>
   <!-- Circuits modal -->
   <div id="circuits-modal" class="ui modal">
     <div class="ui content">
