[fix] important! calling modal('hide') will drop datas. change all dimmer/loader implement in design.html into message.

--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -290,6 +290,18 @@
     </div>
   </div>
 
+  <!-- msg modal -->
+  <div id="design-msg-modal" class="ui basic modal">
+      <div class="ui icon message">
+        <i class="notched circle loading icon"></i>
+        <div class="content">
+          <div class="header" id="design-msg-header">
+            Just one second
+          </div>
+          <p id="design-msg-body">Success.</p>
+        </div>
+      </div>
+  </div>
   <!-- Creating new gene modal -->
   <div id="new-gene-modal" class="ui tiny modal">
     <div class="content">
