--- a/designSite/account/templates/personal_index.html
+++ b/designSite/account/templates/personal_index.html
@@ -238,6 +238,38 @@
       </div>
     </div>
   </div>
+  
+  <!-- click and get part's detail modal -->
+  <div id="inspect-item-modal" class="ui tiny modal">
+    <div class="content">
+      <form id="inspect-item-form" class="ui form">
+        <div class="field">
+          <label>Part role</label>
+          <input type="text" readonly="readonly" name="component-role" placeholder="part role">
+        </div>
+        <div class="field">
+          <label>Display ID</label>
+          <input type="text" readonly="readonly" name="component-id" placeholder="display id">
+        </div>
+        <div class="field">
+          <label>Name</label>
+          <input type="text" readonly="readonly" name="component-name">
+        </div>
+        <div class="field">
+          <label>Version</label>
+          <input type="text" readonly="readonly" name="component-version" placeholder="1">
+        </div>
+        <div class="field">
+          <label>Description</label>
+          <textarea rows="6" name="component-description" readonly="readonly"></textarea>
+        </div>
+        <div class="field">
+          <label>DNA Sequence</label>
+          <textarea name="component-sequence" readonly="readonly"></textarea>
+        </div>
+      </form>
+    </div>
+  </div>
 
   {% else %}
   <h5 class="ui error">You should log in first.</h5>
