fix chassis modal auto open

--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -691,6 +691,7 @@
   <div id="set-chassis-modal" class="ui tiny modal">
     <div class="content">
       <h5>Chassis</h5>
+      <input id="focus-taker" style="width: 0px; opacity: 0; cursor: default" />
       <div class="ui compact floating selection dropdown" id="chassis-dropdown">
         <div class="text" id="chassis"></div>
         <i class="dropdown icon"></i>
